--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=http-pulse
 spring.main.web-application-type=none
 spring.shell.interactive.enabled=true
 spring.shell.script.enabled=true
+logging.level.root=INFO
