Fixed native build to load requests.pulse resource file in the native image and also fixed bug with jni provider.

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
 				<configuration>
 					<buildArgs>
 						<buildArgss>--enable-url-protocols=http</buildArgss>
+						<arg>-H:+AddAllCharsets</arg>
 					</buildArgs>
 					<metadataRepository>
 						<enabled>true</enabled>
