Added support for main http methods.
Also added Pretty Terminal printing capability.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.main.web-application-type=none
 spring.shell.interactive.enabled=true
 spring.shell.script.enabled=true
 logging.level.root=INFO
+logging.pattern.console=
+spring.main.banner-mode=off
