Add assets for wiki

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.shell.script.enabled=true
 logging.level.root=INFO
 logging.pattern.console=
 spring.main.banner-mode=off
+
+spring.shell.command.help.grouping-mode=flat
+spring.shell.command.history.enabled=false
+spring.shell.command.stacktrace.enabled=false
+spring.shell.command.version.enabled=false
+spring.shell.command.script.enabled=false
